--- a/Counter/index.html
+++ b/Counter/index.html
@@ -12,11 +12,11 @@
         <div class="container">
             <h1>counter</h1>
             <span id="value">0</span>
-            <div class="button-container"></div>
-            <div class="btn decrease">Decrease</div>
-            <div class="btn reset">Reset</div>
-            <div class="btn increase">Increase</div>
-
+            <div class="button-container">
+            <button class="btn decrease">Decrease</button>
+            <button class="btn reset">Reset</button>
+            <button class="btn increase">Increase</button>
+            </div>
         </div>
     </main>
     <script src="app.js"></script>
