--- a/Review display/index.html
+++ b/Review display/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review System</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    
+    <main>
+        <section class="container">
+            <div class="title">
+                <h2>Our Reviews</h2>
+                <div class="underline"></div>
+            </div>
+            <article class="review">
+                <div class="img-container">
+                    <img src="C:\Users\HP B&O\Desktop\IMG_9224.JPG" id="person-img" alt=""/>
+                </div>
+                <h4 id="author">Saurav Shakya</h4>
+                <p id="job">ux designer</p>
+                <p id="info">good stuff.asdkasjdao sdoiasjdjasdjasksj kdja skjdkasj kajlk fjaslkfjasj idj sad .</p>
+            </article>
+        </section>
+    </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
