css saves the day

--- a/Review display/index.html
+++ b/Review display/index.html
@@ -17,7 +17,7 @@
             </div>
             <article class="review">
                 <div class="img-container">
-                    <img src="C:\Users\HP B&O\Desktop\IMG_9224.JPG" id="person-img" alt=""/>
+                    <img src="C:\Users\HP B&O\Desktop\IMG_9224.JPG" id="person-img" alt="" width="300" height="400"/>
                 </div>
                 <h4 id="author">Saurav Shakya</h4>
                 <p id="job">ux designer</p>
