--- a/Review display/index.html
+++ b/Review display/index.html
@@ -22,6 +22,16 @@
                 <h4 id="author">Saurav Shakya</h4>
                 <p id="job">ux designer</p>
                 <p id="info">good stuff.asdkasjdao sdoiasjdjasdjasksj kdja skjdkasj kajlk fjaslkfjasj idj sad .</p>
+            <!--buttons-->
+            <div class="button-container">
+                <button class="prev-btn">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="next-btn">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
+            </div>
+            <button class="random-btn">surprise me</button>
             </article>
         </section>
     </main>
