--- a/Nav Bar/index.html
+++ b/Nav Bar/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-center">
+            <div class="nav-header">
+                <img src="./logo.svg" class ="logo" alt="logo">
+                <button class="nav-toggle">
+                    <i class="fas fa-bars"></i>  
+                </button>
+            </div>
+        </div>
+    </nav>
+    <script src="app.js"></script>
 </body>
 </html>
