--- a/Nav Bar/index.html
+++ b/Nav Bar/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="nav-center">
             <div class="nav-header">
-                <img src="./logo.svg" class ="logo" alt="logo">
+                <img src="C:\Users\HP B&O\Desktop\New folder\20190427_153633.jpg" class ="logo" alt="logo">
                 <button class="nav-toggle">
                     <i class="fas fa-bars"></i>  
                 </button>
