--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
+    <aside class="sidebar">
+        <div class = "sidebar-toggle">
+            asdas
+        </div>
+    </aside>
 <script src="app.js"></script>
 </body>
 </html>
