--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -15,7 +15,47 @@
     <button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
     <aside class="sidebar">
         <div class = "sidebar-toggle">
-            asdas
+            <ul class="links">
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+                <li>
+                    <a href="about.html">about</a>
+                </li>
+                <li>
+                    <a href="projects.html">home</a>
+                </li>
+                <li>
+                    <a href="contact.html">home</a>
+                </li>
+            </ul>
+            <ul class="social-icons">
+                <li>
+                    <a href="https://www.facebook.com/">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com">
+                      <i class="fab fa-behance"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.twitter.com">
+                      <i class="fab fa-sketch"></i>
+                    </a>
+                  </li>
+            </ul>
         </div>
     </aside>
 <script src="app.js"></script>
