--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -19,7 +19,7 @@
     <button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
     <aside class="sidebar">
         <div class = "sidebar-header">
-            <img src="logo.svg" class="logo" alt-="logo">
+            <img src="logo.png" class="logo" alt-="logo">
             <button class="close-btn"><i class="fas fa-times"></i></button>
         </div>
             <ul class="links">
