--- a/Questions/index.html
+++ b/Questions/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+    <!-- extra fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+    <!-- styles -->
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <section class ="question">
+        <div class="title">
+            <h2>General Question</h2>
+        </div>
+ <!--question rakhne thau-->
+        <div class="section-center">
+            <article class="question">
+                <div class="question-title">
+                    <p>Why are you trying to learn js?</p>
+                    <button type="button" class="question-btn">
+                        <span class="plus-icon">
+                        <i class="far fa-plus-square"></i>
+                    </span>
+                    </button>
+                </div>
+            </article>
+        </div>
+
+    </section>
     <script src="app.js"></script>
 </body>
 </html>
