--- a/Questions/index.html
+++ b/Questions/index.html
@@ -25,10 +25,36 @@
                 <div class="question-title">
                     <p>Why are you trying to learn js?</p>
                     <button type="button" class="question-btn">
-                        <span class="plus-icon">
+                    <span class="plus-icon">
                         <i class="far fa-plus-square"></i>
                     </span>
+                    <span class="minus-icon">
+                        <i class="far fa-minus-square"></i>
+                    </span>
                     </button>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Heard that JS is a good way to start programming and learn the concepts of these stuff.
+                    </p>
+                </div>
+            </article>
+            <article class="question">
+                <div class="question-title">
+                    <p>Why am i pursuing a job</p>
+                    <button type="button" class="question-btn">
+                    <span class="plus-icon">
+                        <i class="far fa-plus-square"></i>
+                    </span>
+                    <span class="minus-icon">
+                        <i class="far fa-minus-square"></i>
+                    </span>
+                    </button>
+                </div>
+                <div class="question-text">
+                    <p>
+                        The honest and correct answer is to pursue money. Money is the only driving factor i have. i have bills to pay and it needs moey :)
+                    </p>
                 </div>
             </article>
         </div>
