--- a/Questions/index.html
+++ b/Questions/index.html
@@ -57,8 +57,26 @@
                     </p>
                 </div>
             </article>
+            <article class="question">
+                <div class="question-title">
+                    <p>What do you like to do?</p>
+                    <button type="button" class="question-btn">
+                    <span class="plus-icon">
+                        <i class="far fa-plus-square"></i>
+                    </span>
+                    <span class="minus-icon">
+                        <i class="far fa-minus-square"></i>
+                    </span>
+                    </button>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Honestly, i like to chill. But there is a certain high to solving a question that is kinda unreplaceable.
+                        Hence the programming field.
+                    </p>
+                </div>
+            </article>
         </div>
-
     </section>
     <script src="app.js"></script>
 </body>
