--- a/Menu/index.html
+++ b/Menu/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <!-- styles -->
+    <link rel="stylesheet" href="styles.css" /><link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+    <!-- styles -->
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="menu">
+        <div class="title">
+            <h2>Our menu</h2>
+            <div class="underline"></div>
+        </div>
+        <!--filter buttons-->
+        <!--menu buttons-->
+       <div class="section-center">
+        <!--single item-->
+        <article class="menu-item">
+            <img src="menu-img.jpeg">
+        </article>
+        <!--single item-->
+       </div> 
+    </section>
+    <script src="app.js">
+    </script>
 </body>
 </html>
