--- a/Menu/index.html
+++ b/Menu/index.html
@@ -28,9 +28,17 @@
        <div class="section-center">
         <!--single item-->
         <article class="menu-item">
-            <img src="menu-img.jpeg">
+            <img src="menu-img.jpeg" class="photo" alt="menu item">
+            <div class="item-info">
+                <header>
+                <h4>Cheese Pizza</h4>
+                <h4 class="price">Rs 450</h4>
+            </header>
+            <p>Yummy plain pizza with tomato sauce and mozarella cheese on top. Baked on a wood-fire oven.</p>
+            </div>
         </article>
         <!--single item-->
+        
        </div> 
     </section>
     <script src="app.js">
