--- a/Menu/index.html
+++ b/Menu/index.html
@@ -24,6 +24,12 @@
             <div class="underline"></div>
         </div>
         <!--filter buttons-->
+        <div class="btn-container">
+            <button class="filter-btn" type="button" data-id="all">all</button>
+            <button class="filter-btn" type="button">breakfast</button>
+            <button class="filter-btn" type="button">lunch</button>
+            <button class="filter-btn" type="button">shakes</button>
+        </div>
         <!--menu buttons-->
        <div class="section-center">
         <!--single item-->
