--- a/Menu/index.html
+++ b/Menu/index.html
@@ -26,9 +26,9 @@
         <!--filter buttons-->
         <div class="btn-container">
             <button class="filter-btn" type="button" data-id="all">all</button>
-            <button class="filter-btn" type="button">breakfast</button>
-            <button class="filter-btn" type="button">lunch</button>
-            <button class="filter-btn" type="button">shakes</button>
+            <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
+            <button class="filter-btn" type="button" data-id="lunch">lunch</button>
+            <button class="filter-btn" type="button" data-id="drinks">drinks</button>
         </div>
         <!--menu buttons-->
        <div class="section-center">
