--- a/Menu/index.html
+++ b/Menu/index.html
@@ -25,15 +25,15 @@
         </div>
         <!--filter buttons-->
         <div class="btn-container">
-            <button class="filter-btn" type="button" data-id="all">all</button>
+            <!-- <button class="filter-btn" type="button" data-id="all">all</button>
             <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
             <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-            <button class="filter-btn" type="button" data-id="drinks">drinks</button>
-        </div>
+            <button class="filter-btn" type="button" data-id="drinks">drinks</button> -->
+        </div> 
         <!--menu buttons-->
        <div class="section-center">
         <!--single item-->
-        <article class="menu-item">
+        <!-- <article class="menu-item">
             <img src="menu-img.jpeg" class="photo" alt="menu item">
             <div class="item-info">
                 <header>
@@ -42,7 +42,7 @@
             </header>
             <p>Yummy plain pizza with tomato sauce and mozarella cheese on top. Baked on a wood-fire oven.</p>
             </div>
-        </article>
+        </article> -->
         <!--single item-->
         
        </div> 
