--- a/VideoProject/index.html
+++ b/VideoProject/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <video class="video-container" controls muted autoplay loop>
+            <source src="./video.mp4" type="video/mp4">
+        </video>
+    </header>
+    <h1>video project</h1>
     
 <script src="app.js"></script>   
 </body>
