--- a/VideoProject/index.html
+++ b/VideoProject/index.html
@@ -9,12 +9,24 @@
 </head>
 <body>
     <header>
-        <video class="video-container" controls muted autoplay loop>
+        <video class="video-container" muted autoplay loop>
             <source src="./video.mp4" type="video/mp4">
         </video>
-    </header>
-    <h1>video project</h1>
     
+    <h1>Valorant Gameplay
+    </h1>
+    <!-- video switch -->
+    <button class="switch-btn">
+        <span>
+            play
+        </span>
+        <span>
+            pause
+        </span>
+        <span class="switch">
+        </span>
+    </button>
+</header>
 <script src="app.js"></script>   
 </body>
 </html>
