--- a/VideoProject/index.html
+++ b/VideoProject/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <img src="./preloader.gif" alt="preloader"> 
+    </div>
     <header>
         <video class="video-container" muted autoplay loop>
             <source src="./video.mp4" type="video/mp4">
