--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="home">    
         <!-- navbar -->
-        <nav id="nav"></nav>
+        <nav id="nav">
         <div class="nav-center">
             <div class="nav-header">
                 <img src="./logo.svg" alt="logo" class="logo">
@@ -36,7 +36,27 @@
                 </ul>
             </div>
         </div>
+    </nav>
+    <!-- banner -->
+    <div class="banner">
+        <div class="container">
+            <h1>Saurav Shakya</h1>
+            <p>He is enthusiastic and trying to learn to code in the hopes of getting better. he is trying his best to be employed and earn his living. Earning is the main concern and the second would be work place quality.
+            
+            </p>
+            <a href="#tours" class="scroll-link btn btn-white">
+                Explore More
+            </a>
+        </div>
+    </div>
     </header>
+    <!-- About -->
+    <section id="about" class="section">
+        <div class="title">
+            <h2>About<span>Us</span></h2>
+        </div>
+
+    </section>
     
 <script src="app.js"></script>
 </body>
