--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -55,9 +55,29 @@
         <div class="title">
             <h2>About<span>Us</span></h2>
         </div>
-
     </section>
-    
+    <!-- Services -->
+    <section id="Services" class="section">
+        <div class="title">
+            <h2>Our<span>Services</span></h2>
+        </div>
+    </section>
+    <!--tours -->
+    <section id="tours" class="section">
+        <div class="title">
+            <h2>Featured<span>Tours</span></h2>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer class="section">
+        <p>
+            copyright &copy; Shakya corporation <span class="date">
+                2022
+            </span>
+            .all rights reserved
+        </p>
+    </footer>
+    <!-- javascript -->
 <script src="app.js"></script>
 </body>
 
