--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -77,6 +77,10 @@
             .all rights reserved
         </p>
     </footer>
+    <!-- back to top -->
+    <a href="#home" class="scroll-link top- link">
+        <i class="fas fa-arrow-up"></i>
+    </a>
     <!-- javascript -->
 <script src="app.js"></script>
 </body>
