--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -71,8 +71,7 @@
     <!-- footer -->
     <footer class="section">
         <p>
-            copyright &copy; Shakya corporation <span class="date">
-                2022
+            copyright &copy; Shakya corporation <span id="date">
             </span>
             .all rights reserved
         </p>
