--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -13,7 +13,7 @@
         <nav id="nav">
         <div class="nav-center">
             <div class="nav-header">
-                <img src="./logo.svg" alt="logo" class="logo">
+                <img src="./logo.svg" alt="logo" class="logo"/>
                 <button class="nav-toggle">
                     <i class="fas fa-bars">
                     </i>
