services tab not opening bug

--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -32,7 +32,7 @@
                         <a href="#about" class="scroll-link">About</a>
                     </li>
                     <li>
-                        <a href="#servers" class="scroll-link">Services</a>
+                        <a href="#services" class="scroll-link">Services</a>
                     </li>
                     <li>
                         <a href="#tours" class="scroll-link">Tours</a>
