--- a/tabs/index.html
+++ b/tabs/index.html
@@ -15,6 +15,10 @@
             <h2>About</h2>
             <p>something interesting about the page that i am making is i dont even know.</p>
         </div>
+        <div class="about-center section-center">
+        <article>  
+        </div>
+
     </section>
     <!-- script -->
     <script src="app.js"></script>
