--- a/tabs/index.html
+++ b/tabs/index.html
@@ -17,6 +17,29 @@
         </div>
         <div class="about-center section-center">
         <article>  
+            <img src="./hero.jpg" alt="about picture">
+        </article>
+        <article class="about">
+            <!-- btn container -->
+            <div class="btn-container">
+                <button class="tab-btn active" data-id="history">
+                        history
+                </button>
+                <button class="tab-btn" data-id="vision">
+                    vision
+                </button>
+                <button class="tab-btn" data-id="goals">
+                goals
+                </button>
+            </div>
+        </article>
+        <article class="about-content">
+            <!-- single item -->
+            <div class="content active" id="history">
+                <h4>history</h4>
+            </div>
+            <!-- end of single item -->
+        </article>
         </div>
 
     </section>
