--- a/countdown/index.html
+++ b/countdown/index.html
@@ -5,8 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Timer</title>
+    <link rel="stylesheet" href="styles.css" \>
 </head>
 <body>
-    
+    <section class="section-center">
+<!-- image -->
+        <article class="gift-img">
+            <img src="./gift.jpeg" alt="gift picture" />
+        </article>
+        <!-- info -->
+        <article class="gift-info">
+            <h3>old iphone giveaway</h3>
+            <h4 class="giveaway">
+                Giveaway Ends on sunday ,24 april 2023, 8:00 am
+            </h4>
+            <p>
+                If you're looking for random paragraphs, you've come to the right place. 
+                When a random word or a random sentence isn't quite enough, the next logical 
+                step is to find a random paragraph. We created the Random Paragraph Generator 
+                with you in mind. The process is quite simple. Choose the number of random paragraphs 
+                you'd like to see and click the button. Your chosen number of paragraphs will instantly appear.
+            </p>
+            <div class="deadline">
+                <!-- days -->
+                <div class="deadline-format">
+                    <div>
+                        <h4 class="days">34</h4>
+                        <span>days</span>
+                    </div>
+                </div>
+                <!-- endOfItem -->
+                <!-- hours -->
+                <div class="deadline-format">
+                    <div>
+                        <h4 class="hours">25</h4>
+                        <span>hours</span>
+                    </div>
+                </div>
+                <!-- endOfItem -->
+                <!-- mins -->
+                <div class="deadline-format">
+                    <div>
+                        <h4 class="mins">6</h4>
+                        <span>mins</span>
+                    </div>
+                </div>
+                <!-- endOfItem -->
+                <!-- secs -->
+                <div class="deadline-format">
+                    <div>
+                        <h4 class="secs">34</h4>
+                        <span>secs</span>
+                    </div>
+                </div>
+                <!-- endOfItem -->
+            </div>
+        </article>
+    </section>
+    <script src="app.js">
+    </script>
 </body>
 </html>
