--- a/RandomParagraphGenerator/index.html
+++ b/RandomParagraphGenerator/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link style="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <script src="app.js"></script>
 </body>
-</html>
+</html> 
