--- a/RandomParagraphGenerator/index.html
+++ b/RandomParagraphGenerator/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lorem Ipsum</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section class="section-center">
+        <h3>tired of boring lorem ipsum?
+            <form class="lorem-form">
+                <label for="amount">Paragraphs:</label>
+                <input type="number" name="amount" id="amount" placeholder="5"/>
+                <button type="submit" class="btn">Generate</button>
+            </form>
+        </h3>
+    </section>
     <script src="app.js"></script>
 </body>
 </html> 
