--- a/RandomParagraphGenerator/index.html
+++ b/RandomParagraphGenerator/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <section class="section-center">
-        <h3>tired of boring lorem ipsum?
+        <h3>tired of boring lorem ipsum?</h3>
             <form class="lorem-form">
                 <label for="amount">Paragraphs:</label>
                 <input type="number" name="amount" id="amount" placeholder="5"/>
                 <button type="submit" class="btn">Generate</button>
             </form>
-        </h3>
+        <article class="lorem-text"></article>
     </section>
     <script src="app.js"></script>
 </body>
